trying to resolve a bug

--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -4,6 +4,11 @@ html{
     scroll-behavior: smooth;
 }
 
+html, body{
+    min-height: 100vh;
+    min-height: -webkit-fill-available;
+}
+
 *{ 
     margin: 0;
     padding: 0;
