--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,7 +174,7 @@ body{
     align-items: flex-end;
     gap: 20px;
     width: 100%;
-    min-height: 100vh;
+    height: 100vh;
     position: relative;
     padding: 20px;
 }
