--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -1,5 +1,7 @@
 @charset "utf-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 html{
     scroll-behavior: smooth;
 }
@@ -16,23 +18,23 @@ html, body{
     text-decoration: none;
     list-style: none;
     color: #000; /*bb641e*/
-    font-family: Arial, sans-serif;
+    font-family: 'Raleway', sans-serif;
 }
 
 ::-webkit-scrollbar{
     width: 8px;
-    background-color: black;
+    background-color: white;
 }
 
 ::-webkit-scrollbar-thumb{
-    background-color: #ffe0cebb;
+    background-color: #e7b191;
 }
 
 ::-webkit-scrollbar-button{
-    background-color: #FFE0CE;
+    background-color: #e7b191;
     height: 10px;
 }
 
 ::-webkit-scrollbar-track{
-    color: #FFE0CE;
+    color: #e7b191;
 }
