--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -254,9 +254,9 @@ h4{
 
 .abilitiesWrapper{
     display: grid;
-    grid-template-columns: repeat(auto-fit, 250px);
+    grid-template-columns: repeat(auto-fit, 220px);
     grid-template-rows: repeat(2, 1fr);
-    justify-content: space-around;
+    justify-content: space-evenly;
     gap: 20px;
     max-width: 900px;
     width: 100%;
@@ -375,7 +375,7 @@ h4{
     .mainNavigation{
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        justify-content: space-around;
         align-items: flex-start;
 
         visibility: hidden;
@@ -448,10 +448,6 @@ h4{
     }
 
     /*Abilities*/
-
-    .abilitiesWrapper{
-        grid-template-columns: repeat(auto-fit, 225px);
-    }
 
     /*price*/
 
